CSS textarea visibility fix

--- a/assets/src/sass/folio_overrides.fields.scss
+++ b/assets/src/sass/folio_overrides.fields.scss
@@ -1,19 +1,41 @@
-/* taglists used as attributes */
 
+
+// -----------------------------------
+// taglists used as attributes
+// -----------------------------------
 // .section-handle-bundles,.section-images-bundles,
 #field-33, #field-25, #field-40, #field-39 {
-	&.local-taglist input[type=text],
-	&.local-taglist ul.tags {
-		font-family: consolas, menlo, monospace;
-	}
-	&.local-taglist .tags li {
-		display: inline-block;
-		color: hsl(0,0%,50%);
-		background-color: hsl(0,0%,95%);
-		border-radius: 4px;
-		padding: 1px 6px 0px;
-		margin: 2px 0px; border: 1px solid hsl(0, 0%, 80%);
-		// margin: 3px 1px; box-shadow: 1px 1px 1px -1px hsl(0, 0%, 50%);
+	&.local-taglist {
+		textarea,
+		input[type=text],
+		ul.tags {
+			font-family: consolas, menlo, monospace;
+		}
+		ul.tags {
+//			-webkit-column-width: 24em;
+//			-moz-column-width: 24em;
+			column-width: 24em;
+//			max-height: 9em;
+//			overflow: scroll;
+		}
+		.tags li {
+			display: block;
+			box-sizing: border-box;
+			font-size: 100%;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			
+//			display: inline-block;
+//			color: hsl(0,0%,50%);
+//			background-color: hsl(0,0%,95%);
+//			border-radius: 4px;
+//			padding: 1px 6px 0px;
+//			margin: 2px 0px; border: 1px solid hsl(0, 0%, 80%);
+//			margin: 3px 1px;
+//			box-shadow: 1px 1px 1px -1px hsl(0, 0%, 50%);
+//			background-color: rgb(255, 255, 255);
+		}
 	}
 }
 
